--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,6 +107,10 @@ jobs:
           --junitxml=junit/test-results-${{ matrix.python-version }}.xml
           --self-contained-html
           tests/
+        env: # Or as an environment variable
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
 
       # Artifact upload
       - name: Upload pytest test results
