--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,120 +2,108 @@ name: build
 
 on:
   push:
-    branches: [develop, master]
+    branches: [develop, main]
   pull_request:
-    branches: [develop, master]
+    branches: [develop, main]
   workflow_dispatch:
 
 jobs:
   pre-flight:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: ['3.10', '3.11']
+        os: [ubuntu-latest]
 
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      # Install poetry
+      - name: Install poetry
+        run: pipx install poetry
 
       # Setup Python
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
+          cache: 'poetry'
           python-version: ${{ matrix.python-version }}
 
       # Cache pre-commit
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
           key: pre-commit|${{ matrix.python-version }}|${{ hashFiles('.pre-commit-config.yaml') }}
 
-      # Get pip directory
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      # Cache pip directory
-      - name: pip cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
-
       # Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .[develop]
+          poetry install --with dev,test --all-extras
 
       # Lint project using pre-commit config
       - name: Lint with pre-commit
         run: |
-          pre-commit --version
-          pre-commit install
-          pre-commit run --all-files
+          poetry run pre-commit --version
+          poetry run pre-commit install
+          poetry run pre-commit run --all-files
         env:
           PRE_COMMIT_HOME: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
 
   test:
     needs: pre-flight
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.10', '3.11']
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      # Install poetry
+      - name: Install poetry
+        run: pipx install poetry
 
       # Setup Python
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.os }} ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
+          cache: 'poetry'
           python-version: ${{ matrix.python-version }}
-
-      # Get pip directory
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      # Cache pip directory
-      - name: pip cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
 
       # Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .[develop]
+          poetry install --with dev,test --all-extras
 
       # Test package and save artifacts
       - name: Test with pytest
         run: >
-          pytest
+          poetry run pytest
           --cov=falcon_provider_storage
-          --cov-report=html:artifacts/cov-report-${{ matrix.python-version }}
-          --cov-report=term
-          --html=artifacts/test-report-${{ matrix.python-version }}.html
-          --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+          --cov-report=html:artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
+          --cov-report=xml
+          --html=artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+          --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
           --self-contained-html
           tests/
-        env: # Or as an environment variable
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          S3_BUCKET: ${{ secrets.S3_BUCKET }}
+
+      # Upload file to codecov
+      - name: Upload to codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          # files: ./coverage1.xml,./coverage2.xml # optional
+          flags: pytest # optional
+          verbose: false # optional (default = false)
 
       # Artifact upload
       - name: Upload pytest test results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
+          name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}
+          path: |
+            artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
+            artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+            junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
         if: ${{ always() }}
